[package]
name = "conf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = { path = "../base" }

dirs = "^4.0"
peg = "^0.8"
serde = { version = "^1.0", features = ["derive"] }
toml = "^0.5"
which = "^4.2"

[dev-dependencies]
path-slash = "^0.1"